<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RootToolsExTest</string>
    <string name="all_the_ramdroids">ALL the ramdroids</string>
    <string name="even_more_ramdroids">Even more ramdroids</string>
    <string name="got_root">Got root?</string>
    <string name="got_busybox">Got busybox?</string>
    <string name="root_OK">Root OK</string>
    <string name="busybox_OK">Busybox OK</string>
    <string name="root_FAILED">Root FAILED</string>
    <string name="busybox_FAILED">Busybox FAILED</string>
    <string name="app_exists_on_data">App exists on DATA partition?</string>
    <string name="app_exists_on_system">App exists on SYSTEM partition?</string>
    <string name="app_exists_in_trash">App exists in TRASH?</string>
    <string name="app_fits_on_data">App fits on DATA partition?</string>
    <string name="app_fits_on_system">App fits on SYSTEM partition?</string>
    <string name="app_fits_in_trash">App fits in TRASH?</string>
</resources>
