<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" >

    <EditText
            android:id="@+id/packageName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_exists_on_data"
            android:onClick="appExistsOnData" />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_exists_on_system"
            android:onClick="appExistsOnSystem" />

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_exists_in_trash"
            android:onClick="appExistsInTrash" />

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_fits_on_data"
            android:onClick="appFitsOnData" />

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_fits_on_system"
            android:onClick="appFitsOnSystem" />

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_fits_in_trash"
            android:onClick="appFitsInTrash" />

    <TextView
            android:id="@+id/result"
            android:textSize="17dp"
            android:textStyle="bold"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLines="10"
            android:scrollHorizontally="false"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"  />

</LinearLayout>

